--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   --color-text-light: #E0E0E0;
   --color-text-medium: #A0A0A0;
 
-  --font-display: 'Bebas Neue', cursive; /* Para títulos grandes, logo */
+  --font-display: 'Montserrat', sans-serif; /* Para títulos grandes, logo */
   --font-body: 'Montserrat', sans-serif; /* Para cuerpo de texto y UI */
   
   --font-admin-primary-display: 'Roboto Condensed', sans-serif; /* Títulos principales en Admin */
@@ -106,6 +106,11 @@ body {
   margin-bottom: 1.5rem;
   letter-spacing: 2px;
   text-shadow: 0 0 5px rgba(176, 141, 87, 0.5); /* Sutil brillo dorado */
+}
+
+#cartelera-section {
+  /* Ajusta este valor a la altura de tu header fijo */
+  scroll-margin-top: 80px; /* Ejemplo, si tu header mide 80px de alto */
 }
 
 @media (max-width: 768px) {
